header pos fix , main overflow Y & hide scroll-bar

--- a/src/global.scss
+++ b/src/global.scss
@@ -5,3 +5,6 @@
     box-sizing: border-box;
     font-family: 'Open Sans Variable', sans-serif;
 }
+#global-body{
+    position: relative;
+}
